# dynamicxx

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: dynamicxx-config.cmake.in
examples/: CMakeLists.txt  main.cc
include/dynamicxx/: dynamicxx.h
tests/: CMakeLists.txt  main.cc
